--- a/src/sass/page-template-fonts.scss
+++ b/src/sass/page-template-fonts.scss
@@ -21,3 +21,18 @@
 // 	font-style: normal;
 // 	font-display: swap
 // }
+
+@font-face {
+    font-family: HarmoniaSansStd;
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local("HarmoniaSansStd"),local("HarmoniaSansStd-Regular"),url(https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10042/HarmoniaSansStd-Regular.otf) format("opentype")
+}
+@font-face {
+    font-family: HarmoniaSansBlk;
+    font-style: normal;
+    font-weight: 900;
+    font-display: swap;
+    src: local("HarmoniaSansStd Black"),local("HarmoniaSansStd-Black"),url(https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10042/HarmoniaSansStd-Black.otf) format("opentype")
+}
