--- a/src/sass/page-template-variables.scss
+++ b/src/sass/page-template-variables.scss
@@ -2,30 +2,35 @@
 // Uncomment to use and reference engrid-scrips SASS files for more CSS Custom Properties.
 
 // All CSS Custom Properties should be scoped to the theme using CSS Data Attributes.
-[data-engrid-theme="organizational-name"]{
+[data-engrid-theme="ran"]{
     // TYPOGRAPHY DEFAULT
-    // --default_font-family: var(--native-fonts__sans-serif);
+    --default_font-family:"HarmoniaSansStd", sans-serif;
+    --bold_font-family:"HarmoniaSansBlk", sans-serif;
     // --default_color: initial;
-    // --default_font-size: var(--root_font-size);
+    --root_font-size:1.09em;
+    --default_font-size: var(--root_font-size);
     // --default_font-weight: initial;
     // --default_line-height: initial;
 
     // TYPOGRAPHY H1
-    // --h1_font-family: var(--default_font-family);
+    --h1_font-family:"HarmoniaSansBlk", sans-serif;
     // --h1_color: initial;
-    // --h1_font-size: calc(var(--root_font-size) * var(--scale-up_160pct));
+    --h1_font-size: calc(var(--root_font-size) * 2.5);
     // --h1_font-weight: initial;
-    // --h1_line-height: initial;
-        
+    --h1_line-height: 1.1;
+
+    // TYPOGRAPHY H2
+    --h2_font-size: calc(var(--root_font-size) * 1.5);
+
     // TYPOGRAPHY P
-    // --p_font-family: var(--default_font-family);
+    --p_font-family: var(--default_font-family);
     // --p_color: initial;
     // --p_font-size: var(--root_font-size);
     // --p_font-weight: initial;
     // --p_line-height: initial;
 
     // TYPOGRAPHY A
-    // --a_font-family: var(--default_font-family);
+    --a_font-family: var(--default_font-family);
     // --a_color: initial;
     // --a_text-decoration: underline;
 
@@ -35,15 +40,15 @@
     // --a_text-decoration_hover: initial;
 
     // TYPOGRAPHY INPUT
-    // --input_font-family: var(--default_font-family);
-    // --input_color: #000000;
-    // --input_font-size: var(--root_font-size);
+    --input_font-family: var(--default_font-family);
+    --input_color: #000000;
+    --input_font-size: 1em;
     // --input_font-weight: initial;
     // --input_line-height: initial;
-    // --input_background-color: #fafafa;
-    // --input_border-width: 1px;
-    // --input_border-color: #dfdfe1;
-    // --input_border-radius: 6px;
+    --input_background-color: var(--white);
+    --input_border-width: 1px;
+    --input_border-color: #000;
+    --input_border-radius: 0;
     // --input_placeholder-color: var(--color_light-gray);
     // --input_box-shadow: inset 0 2px 2px -1px rgba(74, 74, 104, 0.1);
         
@@ -56,30 +61,36 @@
     // --input_box-shadow_hover: --input_box-shadow;
 
     // TYPOGRAPHY BUTTON
-    // --button_font-family: var(--default_font-family);
-    // --button_color: var(--color_white);
-    // --button_font-size: var(--root_font-size);
+    --button_font-family: var(--bold_font-family);
+    --button_color: var(--color_white);
+    --button_font-size: 1.6rem;
     // --button_font-weight: initial;
     // --button_line-height: initial;
     // --button_background-color: #535b61;
-    // --button_border-width: 1px;
+    --button_border-width: 0;
     // --button_border-color: var(--color_black);
-    // --button_border-radius: 6px;
+    --button_border-radius: 0px;
 
     // TYPOGRAPHY BUTTON:HOVER
     // --button_color_hover: var(--button_color);
     // --button_background-color_hover: var(--color_black);
     // --button_border-color_hover: var(--button_background-color_hover);
+    --button_background-color_checked: #f1700b;
 
     // TYPOGRAPHY BUTTON:SELECTED
     // --button_color_checked: var(--button_color_hover);
     // --button_background-color_checked: var(--button_background-color_hover);
     // --button_border-color_checked: var(--button_border-color_hover);
 
+    // PRIMARY COLORS
+    --color_primary: #000000;
+    --color_primary_accent: #f1700b;
+
     // DONATION PAGE
-    // --give-monthly-donation-amount-appended-label: "/mo";
+    --give-monthly-donation-amount-appended-label: "/mo";
     // --give-annual-donation-amount-appended-label: "/yr";  
-    // --recurring-frequency__button_count: 4;
-    // --donation-amount__button_count: 4;
-    // --give-by-select__button_count: 4;
+    --recurring-frequency__button_count: 3;
+    --donation-amount__button_count: 3;
+    --give-by-select__button_count: 3;
+    --label-font-family: var(--default_font-family);
 }
