--- a/src/sass/page-template-styles.scss
+++ b/src/sass/page-template-styles.scss
@@ -1,5 +1,7 @@
 /* Add your custom theme styles here */
-[data-engrid-theme="ran"]{
+[data-engrid-theme="ran2"]{
+
+
 .highlight {
     background-color: #f9f003;
     color: #343432;
@@ -7,10 +9,16 @@
     font-weight: 500;
     display: inline-block;
     text-align:center;
+    font-size: (0.05552em * 32);
 }
 
 .highlight.big {
     font-size: 1.5rem;
+}
+
+h2.highlight {
+  text-transform:uppercase;
+  padding:12px 15px 10px 15px;
 }
 
 .monthly-gift-upsell-tooltip .highlight:after {
@@ -25,10 +33,6 @@
     border-top-color: #f9f003;
     margin-left: 30px;
     z-index: 1;
-}
-
-.en__field--donationAmt .en__field__element--radio .en__field__item label {
-    height:64px;
 }
 
 b, strong {
@@ -50,33 +54,97 @@ b, strong {
     font-family:var(--bold_font-family);
     font-size: calc(0.05552em * 24);
     text-transform: none !important;
-    padding-right:3rem;
+    margin:0 1.7rem 0 1.3rem;
 }
 
 .en__field__label[for=en__field_transaction_recurrpay0]:focus, .en__field__label[for=en__field_transaction_recurrpay1]:focus {
-    outline:none;
+    outline:none !important;
 }
 
-.en__field__input--radio + .en__field__label::before /* , .en__field__input--checkbox + .en__field__label::before, .en__contactDetails__rows::before */ {
-    content: "";
-    position: absolute;
-    height: calc(1.4rem - 2px);
-    width: calc(1.4rem - 2px);
-    left: -2rem;
-    display: inline-block;
-    vertical-align: middle;
-    border: 4px solid #000000;
-    box-shadow: inset 0 0 0 5px #ffffff;
-    background-color: #ffffff;
-    cursor: pointer;
-    transition-duration: 0.25s;
-    transition-property: border-color, background-color;
+.frequency {
+
+    .en__field__input--radio + .en__field__label::before {
+        content: "";
+        position: absolute;
+        height: calc(1.4rem - 2px);
+        width: calc(1.4rem - 2px);
+        left: -2rem;
+        display: inline-block;
+        vertical-align: middle;
+        border: 4px solid #000000;
+        box-shadow: inset 0 0 0 5px #ffffff;
+        background-color: #ffffff;
+        cursor: pointer;
+        transition-duration: 0.25s;
+        transition-property: border-color, background-color;
+    }
+
+    .en__field__input--radio:checked + .en__field__label::before {
+        background-color: #f1700b;
+        box-shadow: inset 0 0 0 2px #ffffff;
+        border-width: 2px;
+    }
 }
 
-.en__field__input--radio:checked + .en__field__label::before /* , .en__field__input--checkbox:checked + .en__field__label::before, .en__contactDetails__select:checked + .en__contactDetails__rows::before */ {
-    background-color: #f1700b;
-    box-shadow: inset 0 0 0 2px #ffffff;
-    border-width: 2px;
+.give-by-select {
+
+    input[type=radio]+label:before {
+        display:none;
+    }
+
+    .en__field--radio .en__field__item input[type="radio"] + label {
+        flex-grow: 1;
+        padding: 1rem 0 1rem 2.25rem;
+        background-position-x: calc(50% - 25px);
+        background-position-y: calc(50% - 2px);
+        background-repeat: no-repeat;
+        font-size: calc(0.05552em * 18);
+        font-weight: bold;
+        letter-spacing: 0.4px;
+        text-align: center;
+        color: #ffffff;
+        text-transform: none;
+        background-color:var(--color_primary);
+        justify-content: center;
+    }
+
+    .en__field--radio .en__field__item input[type="radio"]:checked {
+      background-color: var(--color_primary_accent) !important;
+    }
+
+    .radio-to-buttons .en__field--radio input[type="radio"]:checked + label, .radio-to-buttons .en__field--radio .en__field__item--other.has-value input, .radio-to-buttons .en__field--radio .en__field__item--other:not(.en__field__item--hidden) input, .give-by-select .en__field--radio input[type="radio"]:checked + label, .give-by-select .en__field--radio .en__field__item--other.has-value input, .give-by-select .en__field--radio .en__field__item--other:not(.en__field__item--hidden) input, .en__field--donationAmt.en__field--radio input[type="radio"]:checked + label, .en__field--donationAmt.en__field--radio .en__field__item--other.has-value input, .en__field--donationAmt.en__field--radio .en__field__item--other:not(.en__field__item--hidden) input {
+      text-transform: none;
+      background-color: #f1700b;
+      border-color: #f1700b;
+      color: #ffffff;
+    }
+
+    .en__field__input--other:focus {background-color:pink !important;}
+
+    .radio-to-buttons_donationAmt>.en__field>.en__field__element .en__field__input--other:focus {background-color: pink !important;}
+    /*
+    .en__field--radio .en__field__item input[type="radio"]:checked + label {
+        text-transform: none;
+        background-color: #f1700b;
+        border-color: #f1700b;
+        color: #ffffff;
+    }
+    */
+    .en__field--radio input[value$="ard"] + label {
+        background-size: 24px 18px;
+        background-image: url("https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10042/card.png?v=1572545889000");
+    }
+
+    .en__field--radio input[value$="aypal"] + label {
+        background-size: 17px 20px;
+        background-image: url("https://acb0a5d73b67fccd4bbe-c2d8138f0ea10a18dd4c43ec3aa4240a.ssl.cf5.rackcdn.com/10042/paypal.png?v=1572545891000");
+    }
+
+    .en__field__item {
+        width:50%;
+    }
+
+
 }
 
 .en__field__input--checkbox + .en__field__label, .en__contactDetails__rows {
@@ -85,6 +153,23 @@ b, strong {
     text-transform: none;
     letter-spacing: 0.4px;
     display: inline-block;
+}
+
+.en__field__input--checkbox:checked + .en__field__label::after, .en__contactDetails__select:checked + .en__contactDetails__rows::after {
+    content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='21' height='16' viewBox='0 0 21 16'><path fill='%23F57E20' fill-rule='nonzero' d='M18.76.16L6.68 12.113l-4.44-4.392a.555.555 0 0 0-.779 0L.161 9.006a.541.541 0 0 0 0 .771L6.29 15.84a.555.555 0 0 0 .78 0l13.77-13.624a.541.541 0 0 0 0-.771L19.539.16a.555.555 0 0 0-.779 0z'/></svg>");
+    position: absolute;
+    left: 5px;
+    top: 0;
+    width: 21px;
+    height: 16px;
+    color: #f1700b;
+    background-color: transparent;
+    font-size: calc(0.05552em * 18);
+}
+
+.en__field__input--checkbox + .en__field__label {
+    text-indent:-32px;
+    margin-left:32px;
 }
 
 .en__field_supporter_country {
@@ -109,14 +194,10 @@ select, select.en__field__input--select, select.en__field__input--splitselect, s
     height:48px;
 }
 
-body:not(#en__pagebuilder)[data-engrid-layout=centercenter1col] .page-backgroundImage {
-    -webkit-clip-path: polygon(100% 0, 100% 90vh, 50% 110vh, 0 90vh, 0 0);
-    clip-path: polygon(100% 0, 100% 90vh, 50% 110vh, 0 90vh, 0 0);
-    height: 120vh;
-    background-color: #487c0f;
+h1 {
+    text-transform:uppercase;
+    margin:4rem 0 .5rem 0 !important;
 }
-
-h1 {text-transform:uppercase;}
 
 .pre-footer-card-wrapper {
     display: flex;
@@ -146,7 +227,8 @@ h1 {text-transform:uppercase;}
 }
 
 .footer-wrapper .footer-menu {
-    padding: 1rem;
+    padding: 0 2rem;
+    font-weight:var(--bold_font-family);
 }
 
 .footer-wrapper .footer-copy {
@@ -165,6 +247,20 @@ h1 {text-transform:uppercase;}
     background-color: #000;
 }
 
+.footer-wrapper .footer-copy p {
+    border-left: 1px solid #fff;
+    padding-left: 65px;
+    font-size:calc(0.05552em * 14);
+}
+
+.footer-wrapper .footer-menu a {
+    display: block;
+    color: #fff;
+    font-size: calc(0.05552em * 16);
+    font-weight: bold;
+    text-decoration: none;
+}
+
 
 .content-preFooter {
     grid-column: pc;
@@ -179,8 +275,30 @@ h1 {text-transform:uppercase;}
   }
 
 
+  .en__component--advrow .body-header::before, .en__component--advrow .body-banner::before, .en__component--advrow .body-top::before, .en__component--advrow .body-side::before, .en__component--advrow .body-main::before, .en__component--advrow .body-bottom::before, .en__component--advrow .body-footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -2;
+    box-shadow: 0 36px 50px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+  }
 
+  .page-backgroundImage:before {
+      position:absolute !important;
+      background-position: top left !important;
+      background-repeat: no-repeat;
+      z-index: -13;
+      background-size: cover;
+      height:120vh;
+  }
 
+  .body-headerOutside {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
 
  /*
 * ####################################################################################################################
@@ -250,6 +368,7 @@ h1 {text-transform:uppercase;}
       + label {
       font-size: calc((0.05552em * 18) * 1);
     }
+
   }
   
   @media screen and (max-width: 599px) {
@@ -257,6 +376,10 @@ h1 {text-transform:uppercase;}
       font-size: 94%;
     }
   
+    .radio-to-buttons_donationAmt {
+      --donation-amount__button_count:2;
+    }
+
      .en__field--donationAmt .en__field__element--radio .en__field__item {
       width: calc(50% - 0.5rem);
     }
@@ -404,14 +527,7 @@ h1 {text-transform:uppercase;}
         border-left: 1px solid black;
         border-right: 1px solid black;
       }
-  /*
-      .body-header {
-        margin-top: 1rem;
-        border-top: 1px solid black;
-        border-top-left-radius: $client-input-border-radius;
-        border-top-right-radius: $client-input-border-radius;
-      }
-  */
+
       .content-preFooter.pseudo-subgrid > div {
         grid-column: cc;
       }
@@ -453,6 +569,105 @@ h1 {text-transform:uppercase;}
    
 
 
-  
+.radio-to-buttons_donationAmt {
 
+    @media screen and (max-width:480px) {
+        .radio-to-buttons_donationAmt .en__field--donationAmt.en__field--radio input[type=radio]+label {
+            font-size: 1.2rem;
+        }
+    }
+}
+
+.radio-to-buttons_donationAmt>.en__field>.en__field__element .en__field__input--other {
+    background-color:var(--donation-amount__button_background-color);
+    font-family:var(--donation-amount__button_font-family);
+    font-size:var(--donation-amount__button_font-size);
+    color:#fff;
+    // text-align: center;
+    padding-left:33%;
+}
+
+.en__field--donationAmt .en__field__item--other::before {
+  display: block;
+  content: "$";
+  position: relative;
+  height: 0;
+  left: calc((100% / 3) - 1.2rem);
+  top: 1rem;
+  color: #ffffff;
+  width: 0;
+}
+
+.en__field--donationAmt .en__field__label--item, .en__field--donationAmt .en__field__item--other::before, .en__field--donationAmt .en__field__item--other input {
+  font-family: var(--bold_font-family);
+  font-size: var(--donation-amount__button_font-size);
+}
+
+.en__field--donationAmt .en__field__item--other:focus {
+  background-color: var(--color_primary_accent) !important;
+}
+
+.en__submit .button, .en__submit button {
+    background-color:var(--color_primary_accent);
+    margin-bottom:2rem;
+}
+
+.content-preFooter {
+    z-index:-6 !important;
+}  
+
+}
+
+body:not(#en__pagebuilder)[data-engrid-layout=centercenter1col] .page-backgroundImage {
+    -webkit-clip-path: polygon(100% 0, 100% 90vh, 50% 110vh, 0 90vh, 0 0);
+    clip-path: polygon(100% 0, 100% 90vh, 50% 110vh, 0 90vh, 0 0);
+    height: 120vh;
+    background-color: #487c0f;
+    }
+
+@media screen and (max-width:980px) {
+  .footer-wrapper .footer-copy p {
+    border:0 !important;
+    padding:0 !important;
+  }
+}
+
+@media screen and (max-width:600px) {
+    body:not(#en__pagebuilder)[data-engrid-layout=centercenter1col] .page-backgroundImage {
+        height:auto;
+    }
+
+    .footer-logo {
+      margin-bottom: 1rem;
+    }
+
+    .body-headerOutside {
+    margin-top: 2rem !important;
+    margin-bottom: 2rem !important;
+}
+}
+
+@media screen and (max-width:460px) {
+    .footer-menu {
+      font-size:.75rem;
+      padding-top:1rem;
+    }
+
+    .footer-wrapper .footer-copy p {
+      text-align: center;
+    }
+}
+
+body:not(#en__pagebuilder) .page-backgroundImageOverlay {display: none;}
+
+/* Force visibility for the background image/video all the way down to the smallest screen sizes */
+/* Overrides: https://github.com/4site-interactive-studios/engrid-scripts/blob/8811d0e3e882b5e9009875f7155cb40e66124093/packages/styles/src/_engrid-background-image.scss#L131 */
+[data-engrid-body-banner="empty"][data-engrid-page-background="image"],
+[data-engrid-page-background="video"] {
+  .page-backgroundImage,
+  .page-backgroundImageOverlay {
+    &::before {
+      content: " " !important;
+    }
+  }
 }
